// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover component as anchor 1`] = `
<Popover
  accessibilityType="menu"
  autoFocus={true}
  content={
    <strong>
      Hello world
    </strong>
  }
  focusLock={false}
  ignoreBoundary={false}
  isOpen={true}
  onClick={[MockFunction]}
  onMouseEnterDelay={200}
  onMouseLeaveDelay={200}
  overrides={Object {}}
  placement="auto"
  renderAll={false}
  returnFocus={true}
  showArrow={false}
  triggerType="click"
>
  <CustomComponent
    aria-controls="bui-mock-id"
    aria-expanded="true"
    aria-haspopup="true"
    key="popover-anchor"
    onClick={[Function]}
  >
    <MockStyledComponent
      aria-controls="bui-mock-id"
      aria-expanded="true"
      aria-haspopup="true"
      forwardedRef={
        Object {
          "current": <span
            aria-controls="bui-mock-id"
            aria-expanded="true"
            aria-haspopup="true"
            styled-component="true"
            test-style="{}"
          />,
        }
      }
      onClick={[Function]}
    >
      <span
        aria-controls="bui-mock-id"
        aria-expanded="true"
        aria-haspopup="true"
        onClick={[Function]}
        styled-component="true"
        test-style="{}"
      />
    </MockStyledComponent>
  </CustomComponent>
  <mockConstructor
    key="new-layer"
    onDocumentClick={[Function]}
    onMount={[Function]}
    onUnmount={[Function]}
  >
    <mockConstructor
      anchorRef={
        <span
          aria-controls="bui-mock-id"
          aria-expanded="true"
          aria-haspopup="true"
          styled-component="true"
          test-style="{}"
        />
      }
      arrowRef={null}
      onPopperUpdate={[Function]}
      placement="auto"
      popperOptions={
        Object {
          "modifiers": Object {
            "preventOverflow": Object {
              "enabled": true,
            },
          },
        }
      }
      popperRef={
        <div
          data-baseweb="popover"
          id="bui-mock-id"
          styled-component="true"
          test-style="{
  \\"position\\": \\"absolute\\",
  \\"top\\": 0,
  \\"left\\": 0,
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"boxShadow\\": \\"$theme.lighting.shadow600\\",
  \\"transitionProperty\\": \\"opacity,transform\\",
  \\"transitionDuration\\": \\"0s\\",
  \\"transitionTimingFunction\\": \\"$theme.animation.easeOutCurve\\",
  \\"opacity\\": 0,
  \\"transform\\": \\"translate3d(-16px, 0px, 0)\\"
}"
        >
          <div
            styled-component="true"
            test-style="{
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"position\\": \\"relative\\"
}"
          >
            <strong>
              Hello world
            </strong>
          </div>
        </div>
      }
    >
      <ForwardRef
        autoFocus={false}
        disabled={true}
        noFocusGuards={false}
        returnFocus={true}
      >
        <ForwardRef
          as="div"
          autoFocus={false}
          disabled={true}
          lockProps={Object {}}
          noFocusGuards={false}
          persistentFocus={false}
          returnFocus={true}
          sideCar={[Function]}
        >
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={-1}
          />
          <div
            data-focus-guard={true}
            key="guard-nearest"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={-1}
          />
          <div
            data-focus-lock-disabled="disabled"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <ForwardRef
              $arrowOffset={
                Object {
                  "left": 0,
                  "top": 0,
                }
              }
              $isAnimating={false}
              $isOpen={true}
              $placement="auto"
              $popoverMargin={8}
              $popoverOffset={
                Object {
                  "left": 0,
                  "top": 0,
                }
              }
              $showArrow={false}
              data-baseweb="popover"
              id="bui-mock-id"
              key="popover-body"
            >
              <MockStyledComponent
                $arrowOffset={
                  Object {
                    "left": 0,
                    "top": 0,
                  }
                }
                $isAnimating={false}
                $isOpen={true}
                $placement="auto"
                $popoverMargin={8}
                $popoverOffset={
                  Object {
                    "left": 0,
                    "top": 0,
                  }
                }
                $showArrow={false}
                data-baseweb="popover"
                forwardedRef={
                  Object {
                    "current": <div
                      data-baseweb="popover"
                      id="bui-mock-id"
                      styled-component="true"
                      test-style="{
  \\"position\\": \\"absolute\\",
  \\"top\\": 0,
  \\"left\\": 0,
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"boxShadow\\": \\"$theme.lighting.shadow600\\",
  \\"transitionProperty\\": \\"opacity,transform\\",
  \\"transitionDuration\\": \\"0s\\",
  \\"transitionTimingFunction\\": \\"$theme.animation.easeOutCurve\\",
  \\"opacity\\": 0,
  \\"transform\\": \\"translate3d(-16px, 0px, 0)\\"
}"
                    >
                      <div
                        styled-component="true"
                        test-style="{
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"position\\": \\"relative\\"
}"
                      >
                        <strong>
                          Hello world
                        </strong>
                      </div>
                    </div>,
                  }
                }
                id="bui-mock-id"
              >
                <div
                  data-baseweb="popover"
                  id="bui-mock-id"
                  styled-component="true"
                  test-style="{
  \\"position\\": \\"absolute\\",
  \\"top\\": 0,
  \\"left\\": 0,
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"boxShadow\\": \\"$theme.lighting.shadow600\\",
  \\"transitionProperty\\": \\"opacity,transform\\",
  \\"transitionDuration\\": \\"0s\\",
  \\"transitionTimingFunction\\": \\"$theme.animation.easeOutCurve\\",
  \\"opacity\\": 0,
  \\"transform\\": \\"translate3d(-16px, 0px, 0)\\"
}"
                >
                  <ForwardRef
                    $arrowOffset={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                    $isAnimating={false}
                    $isOpen={true}
                    $placement="auto"
                    $popoverMargin={8}
                    $popoverOffset={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                    $showArrow={false}
                  >
                    <MockStyledComponent
                      $arrowOffset={
                        Object {
                          "left": 0,
                          "top": 0,
                        }
                      }
                      $isAnimating={false}
                      $isOpen={true}
                      $placement="auto"
                      $popoverMargin={8}
                      $popoverOffset={
                        Object {
                          "left": 0,
                          "top": 0,
                        }
                      }
                      $showArrow={false}
                      forwardedRef={null}
                    >
                      <div
                        styled-component="true"
                        test-style="{
  \\"backgroundColor\\": \\"$theme.colors.backgroundTertiary\\",
  \\"borderTopLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderTopRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomRightRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"borderBottomLeftRadius\\": \\"$theme.borders.popoverBorderRadius\\",
  \\"color\\": \\"$theme.colors.contentPrimary\\",
  \\"position\\": \\"relative\\"
}"
                      >
                        <strong>
                          Hello world
                        </strong>
                      </div>
                    </MockStyledComponent>
                  </ForwardRef>
                </div>
              </MockStyledComponent>
            </ForwardRef>
          </div>
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={-1}
          />
        </ForwardRef>
      </ForwardRef>
    </mockConstructor>
  </mockConstructor>
</Popover>
`;

exports[`Popover component overrides: custom popover arrow has correct props 1`] = `
<ForwardRef
  $arrowOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $isAnimating={false}
  $isOpen={true}
  $placement="auto"
  $popoverMargin={8}
  $popoverOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $showArrow={true}
  key="popover-arrow"
>
  <MockStyledComponent
    $arrowOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $isAnimating={false}
    $isOpen={true}
    $placement="auto"
    $popoverMargin={8}
    $popoverOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $showArrow={true}
    forwardedRef={
      Object {
        "current": <div
          styled-component="true"
          test-style="{
  \\"color\\": \\"red\\"
}"
        />,
      }
    }
  >
    <div
      styled-component="true"
      test-style="{
  \\"color\\": \\"red\\"
}"
    />
  </MockStyledComponent>
</ForwardRef>
`;

exports[`Popover component overrides: custom popover body has correct props 1`] = `
<ForwardRef
  $arrowOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $isAnimating={false}
  $isOpen={true}
  $placement="auto"
  $popoverMargin={8}
  $popoverOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $showArrow={true}
  data-baseweb="popover"
  id="bui-mock-id"
  key="popover-body"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <MockStyledComponent
    $arrowOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $isAnimating={false}
    $isOpen={true}
    $placement="auto"
    $popoverMargin={8}
    $popoverOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $showArrow={true}
    data-baseweb="popover"
    forwardedRef={
      Object {
        "current": <div
          data-baseweb="popover"
          id="bui-mock-id"
          styled-component="true"
          test-style="{
  \\"color\\": \\"green\\"
}"
        >
          <div
            styled-component="true"
            test-style="{
  \\"color\\": \\"red\\"
}"
          />
          <div
            styled-component="true"
            test-style="{
  \\"color\\": \\"blue\\"
}"
          >
            content
          </div>
        </div>,
      }
    }
    id="bui-mock-id"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      data-baseweb="popover"
      id="bui-mock-id"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      styled-component="true"
      test-style="{
  \\"color\\": \\"green\\"
}"
    >
      <ForwardRef
        $arrowOffset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
        $isAnimating={false}
        $isOpen={true}
        $placement="auto"
        $popoverMargin={8}
        $popoverOffset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
        $showArrow={true}
        key="popover-arrow"
      >
        <MockStyledComponent
          $arrowOffset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
          $isAnimating={false}
          $isOpen={true}
          $placement="auto"
          $popoverMargin={8}
          $popoverOffset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
          $showArrow={true}
          forwardedRef={
            Object {
              "current": <div
                styled-component="true"
                test-style="{
  \\"color\\": \\"red\\"
}"
              />,
            }
          }
        >
          <div
            styled-component="true"
            test-style="{
  \\"color\\": \\"red\\"
}"
          />
        </MockStyledComponent>
      </ForwardRef>
      <ForwardRef
        $arrowOffset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
        $isAnimating={false}
        $isOpen={true}
        $placement="auto"
        $popoverMargin={8}
        $popoverOffset={
          Object {
            "left": 0,
            "top": 0,
          }
        }
        $showArrow={true}
      >
        <MockStyledComponent
          $arrowOffset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
          $isAnimating={false}
          $isOpen={true}
          $placement="auto"
          $popoverMargin={8}
          $popoverOffset={
            Object {
              "left": 0,
              "top": 0,
            }
          }
          $showArrow={true}
          forwardedRef={null}
        >
          <div
            styled-component="true"
            test-style="{
  \\"color\\": \\"blue\\"
}"
          >
            content
          </div>
        </MockStyledComponent>
      </ForwardRef>
    </div>
  </MockStyledComponent>
</ForwardRef>
`;

exports[`Popover component overrides: custom popover inner has correct props 1`] = `
<ForwardRef
  $arrowOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $isAnimating={false}
  $isOpen={true}
  $placement="auto"
  $popoverMargin={8}
  $popoverOffset={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  $showArrow={true}
>
  <MockStyledComponent
    $arrowOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $isAnimating={false}
    $isOpen={true}
    $placement="auto"
    $popoverMargin={8}
    $popoverOffset={
      Object {
        "left": 0,
        "top": 0,
      }
    }
    $showArrow={true}
    forwardedRef={null}
  >
    <div
      styled-component="true"
      test-style="{
  \\"color\\": \\"blue\\"
}"
    >
      content
    </div>
  </MockStyledComponent>
</ForwardRef>
`;
